# ebeamtime

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROVENANCE.md  QUALIFICATION.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  ci.md  releasing.md  semantics.md
plans/publishing_campaign/: worklist.md
provenance/: scgds-commit-map.txt
scripts/: installed_smoke.py
src/ebeamtime/: __init__.py  _version.py  api.py  cli.py  config.py  cuda_setup.py  diagnostics.py  extraction.py  native.py  native_cache.py  report.py  semantics.py  stage.py  units.py
src/ebeamtime/backends/: __init__.py  base.py  cpu.py  cuda.py  cuda_ctypes.py  metal.py  metal_ctypes.py
src/ebeamtime/native_src/: ebeamtime_cuda_area.cu  ebeamtime_metal_area.mm
src/ebeamtime/schemas/: ebeamtime-report-v1.schema.json
tests/: __init__.py  test_api.py  test_config.py  test_cuda_backend.py  test_cuda_setup.py  test_extraction_contracts.py  test_native_cache.py  test_units.py
