[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebeamtime"
version = "0.1.0"
description = "Analytical electron-beam lithography write-time estimation from GDSII layouts"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [{name = "Sandbo Chang", email = "sandbochang@outlook.com"}]
keywords = ["GDSII", "electron beam lithography", "EDA", "write time"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
  "gdsdiff>=0.1.0,<0.2",
  "numpy>=1.26",
]

[project.optional-dependencies]
test = ["gdstk>=1.0.0", "jsonschema>=4.23", "pytest>=8"]
dev = ["build>=1.2", "gdstk>=1.0.0", "jsonschema>=4.23", "pytest>=8", "twine>=5"]

[project.scripts]
ebeamtime = "ebeamtime.cli:main"
ebeamtime-diagnostics = "ebeamtime.diagnostics:main"
ebeamtime-prepare-cuda = "ebeamtime.cuda_setup:main"

[project.urls]
Homepage = "https://github.com/SandboChang/ebeamtime"
Issues = "https://github.com/SandboChang/ebeamtime/issues"
Repository = "https://github.com/SandboChang/ebeamtime"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ebeamtime*"]

[tool.setuptools.package-data]
ebeamtime = ["py.typed", "schemas/*.json", "native_src/*.cu", "native_src/*.mm"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.uv]
required-version = "==0.11.29"

[dependency-groups]
dev = [
  "build>=1.2",
  "gdstk>=1.0.0",
  "jsonschema>=4.23",
  "pytest>=8",
  "twine>=5",
]
